gts-macros/tests/compile_fail/invalid_gts_id_too_many_tokens.stderr
error: struct_to_gts_schema: Segment #2: Version must start with 'v', got 'plugin'. Expected format: vendor.package.namespace.type.vMAJOR[.MINOR]
  --> tests/compile_fail/invalid_gts_id_too_many_tokens.rs:25:17
   |
25 |     schema_id = "gts.x.core.modkit.plugin.v1~x.core.license_enforcer.integration.plugin.v1~",
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
